Fixed height issue on mobile screens

--- a/src/Pages/Authentication/style.scss
+++ b/src/Pages/Authentication/style.scss
@@ -8,9 +8,15 @@
     justify-content: normal;
     align-items: normal;
     align-content: stretch;
-    height: 100dvh;
-    width: 100dvw;
+    height: 100vh;
+    width: 100vw;
     background-color: #f5f5f5;
+    overflow: hidden;
+    overflow-y: auto;
+
+    &::-webkit-scrollbar {
+        width: 0;
+    }
 
     header {
         display: block;
